Cleaned up a ton of code, should be in its own branch but alas

--- a/SimTECH/SimTECH/Components/SimProgressLinear.razor
+++ b/SimTECH/SimTECH/Components/SimProgressLinear.razor
@@ -57,7 +57,7 @@
 
     private string IndicatorText(int advanceNum)
     {
-        var lapNumber = NumberHelper.CalcLapCount(advanceNum * CalculationDistance, TrackLength);
+        var lapNumber = NumberHelper.CalculateLapCount(advanceNum * CalculationDistance, TrackLength);
         return lapNumber.ToString();
     }
 }
