--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -42,7 +42,7 @@
             </MudTd>
             <MudTd>
                 <CustomIcon Icon="@context.WeatherIcon" Colour="@context.WeatherColour">
-                    <MudText>@context.Weather</MudText>
+                    <MudText Color="Color.Default">@context.Weather</MudText>
                 </CustomIcon>
             </MudTd>
 
