--- a/SimTECH/SimTECH/Pages/Factors/ManufacturerEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/ManufacturerEditor.razor
@@ -2,7 +2,8 @@
     <TitleContent>
         <MudText Typo="Typo.h5" Color="Color.Secondary">Tyre supplier editor</MudText>
         <MudText Typo="Typo.body2">
-            Hint 1: Wear is subtracted from the remaining life of the tyre, thus a positive number correlates to more wear.<br/>
+            Hint 1: Wear is subtracted from the remaining life of the tyre, thus a positive number correlates to more wear.
+            <br/>
             Hint 2: Life Bonus is added to the total pace of the currently fitted tyre.
         </MudText>
     </TitleContent>
