--- a/SimTECH/SimTECH/Pages/Racing/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Landing.razor
@@ -65,7 +65,7 @@
     </MudItem>
     <MudItem xs="7">
         <MudPaper Class="pa-4 mud-height-full">
-            <MudTable Items="@Model.RaweCeekDrivers.OrderBy(e => e.Grid)" Dense="true" Class="extra-dense">
+            <MudTable Items="@Model.RaweCeekDrivers.OrderBy(e => e.AbsoluteGrid)" Dense="true" Class="extra-dense">
                 <ToolBarContent>
                     <MudText Typo="Typo.h5">Starting grid</MudText>
                 </ToolBarContent>
