--- a/SimTECH/SimTECH/Pages/Racing/SimRacerProgressionLinear.razor
+++ b/SimTECH/SimTECH/Pages/Racing/SimRacerProgressionLinear.razor
@@ -1,4 +1,4 @@
-﻿<div>
+﻿<div class="relative" style="height:8px;width:100%">
     @foreach (var lapEvent in RaceDriver.LapScores)
     {
         @foreach (var raceEvent in lapEvent.ListOfDubiousEvents())
